--- a/book-site/subpages.css
+++ b/book-site/subpages.css
@@ -689,7 +689,7 @@ a.section-nav-label:hover {
 
 @media (max-width: 760px) {
   .subpage-main {
-    padding-top: 88px;
+    padding-top: 112px;
   }
 
   .subpage-hero {
